[gd_scene load_steps=2 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]

[node name="Room" type="Area2D"]
collision_layer = 32
collision_mask = 69
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Room_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Room_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Room_body_exited"]
